objects/ssot__StationaryAssetEnergyUse__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AllocRnwbleEnergyInKwhNumber__c</fullName>
        <label>Alloc Renewable Enrgy Override (kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CarbonFootprintReportDate__c</fullName>
        <label>Carbon Footprint Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__DataGapFillingMethod__c</fullName>
        <label>Data Gap Filling Method</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ElectricityEmissionFactorsId__c</fullName>
        <label>Electricity Emissions Factors</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__FinalEnergyCnsmpNumber__c</fullName>
        <label>Final Energy Consumption</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FuelCnsmpNumber__c</fullName>
        <label>Fuel Consumption</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FuelCnsmpUnit__c</fullName>
        <label>Fuel Consumption Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FuelType__c</fullName>
        <label>Fuel Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Stationary Asset Energy Use Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSystemGeneratedRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Generated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__MktBsdElectriEmssnFctrId__c</fullName>
        <label>Market-Based Elec Emission Factors</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OccupiedFloorAreaNumber__c</fullName>
        <label>Occupied Floor Area</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OccupiedFloorAreaUnitId__c</fullName>
        <label>Occupied Floor Area Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OtherEmssnFctrId__c</fullName>
        <label>Other Emissions Factors</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PowerUsageEffectNumber__c</fullName>
        <label>Power Usage Effectiveness</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProposedEnergyCnsmpNumber__c</fullName>
        <label>Proposed Energy Consumption</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RefrigerantEmssnFctrId__c</fullName>
        <label>Refrigerant Emissions Factor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RenewableEnergyType__c</fullName>
        <label>Renewable Energy Type Override</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReportedConsumptionId__c</fullName>
        <label>Reported Consumption</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__StnryAssetCrbnFtprntId__c</fullName>
        <label>Stationary Asset Carbon Footprint</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StnryAssetEnvrSrcId__c</fullName>
        <label>Stationary Asset Environmental Source</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope1EmissionsNumber__c</fullName>
        <label>Supl Scope 1 Emissions</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope2LocBasedEmssnNumber__c</fullName>
        <label>Supl Scope 2 Loc-Based Emissions</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope2MktBasedEmssnNumber__c</fullName>
        <label>Supl Scope 2 Mkt-Based Emissions</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope3DnstrmEmssnNum__c</fullName>
        <label>Supl Scope 3 Downstream Emissions</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope3UpstrmEmssnNum__c</fullName>
        <label>Supl Scope 3 Upstream Emissions</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SupplierId__c</fullName>
        <label>Supplier</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalFloorAreaNumber__c</fullName>
        <label>Total Floor Area</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalFloorAreaUnitId__c</fullName>
        <label>Total Floor Area Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383726301_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>StationaryAssetEnergyUse_Refrigerant_rel</label>
        <referenceTo>ssot__RefrigerantEmissionFactor__dlm</referenceTo>
        <relationshipLabel>StationaryAssetEnergyUse_Refrigerant_rel</relationshipLabel>
        <relationshipName>rel_1747383726301_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383727664_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>StationaryAssetEnergyUse_ReportedCon_rel</label>
        <referenceTo>ssot__ReportedConsumption__dlm</referenceTo>
        <relationshipLabel>StationaryAssetEnergyUse_ReportedCon_rel</relationshipLabel>
        <relationshipName>rel_1747383727664_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383735838_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>StationaryAssetEnergyUse_AccountId_m_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>StationaryAssetEnergyUse_AccountId_m_rel</relationshipLabel>
        <relationshipName>rel_1747383735838_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>